--- a/wp-content/gulp/dev/sass/style.scss
+++ b/wp-content/gulp/dev/sass/style.scss
@@ -54,10 +54,8 @@ a:hover {
   width: 100vw;
   height: 100vh;
 }
-.scroll-up-to-100{
- 
+.scroll-up-to-100 {
   display: none;
-
 }
 .menu-wrapper {
   &.menu-open {
@@ -134,7 +132,7 @@ a:hover {
         a {
           color: black;
           &::after {
-            transition: all 0.6s ease-out;
+            transition: all 0.6s linear;
           }
           &:hover {
             &::after {
@@ -166,7 +164,7 @@ a:hover {
         a {
           color: white;
           &::after {
-            transition: all 0.6s ease-out;
+            transition: all 0.6s linear;
           }
           &:hover {
             &::after {
@@ -193,7 +191,7 @@ a:hover {
 
     &:hover {
       path {
-        transition: all 0.5s ease-in-out;
+        transition: all 0.5s linear;
         &:first-child {
           transform: translate(1331.14px, -123.873px);
         }
@@ -214,7 +212,7 @@ a:hover {
     width: calc(3vw + 4vh);
     height: calc(3vw + 4vh);
     cursor: pointer;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s linear;
     &:hover {
       transform: rotate(90deg);
     }
@@ -450,7 +448,7 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.6s ease-out;
+  transition: all 0.6s linear;
   img {
     width: 100%;
     height: 100%;
@@ -495,7 +493,7 @@ a:hover {
   color: #fff;
   // font-size: calc(4vh + 7.5vw);
   position: relative;
-  transition: all 0.6s ease-out;
+  transition: all 0.6s linear;
   font-size: calc(9vh + 4.5vw);
 
   &:hover {
@@ -505,7 +503,7 @@ a:hover {
 .menu > li {
   height: 25%;
   position: relative;
-  transition: all 0.6s ease-out;
+  transition: all 0.6s linear;
 }
 .menu > li.menu-item-has-children > a::after {
   content: url(../images/submenu-arrow.svg);
@@ -554,17 +552,17 @@ a:hover {
 }
 
 /*prestation css*/
-.prestations-info-list{
+.prestations-info-list {
   position: relative;
-    height: 100%;
-    flex: 0 0 50%;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: calc(2vh + 4vw);
-    cursor: pointer;
+  height: 100%;
+  flex: 0 0 50%;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: calc(2vh + 4vw);
+  cursor: pointer;
 }
 .prestations-info {
   position: relative;
@@ -890,27 +888,22 @@ a:hover {
   transform: skew(-30deg) rotate(-30deg);
   border: 2px solid transparent;
   background-color: #8b8b8b;
-  transition:all 1s ease;
+  transition: all 1s ease;
 }
 .dott {
   cursor: pointer;
   height: 100%;
   display: flex;
   position: relative;
-  
+
   img {
     width: calc(1vh + 1vw);
     height: calc(1vh + 1vw);
     margin: auto;
   }
 }
-.active:before{
-  background-color:white;
-
-}
-.dott:hover::before {
-  border: 2px solid #ddd;
-  transform: skew(-30deg ) rotate(-60deg);
+.dott.active:before {
+  background-color: white;
 }
 .page-lequipe .page-header-background::after {
   background-image: url(../images/lequipe-edification.png);
@@ -1062,9 +1055,17 @@ a:hover {
 }
 .white-homepage-bottom {
   height: 25%;
+  transition: all 0.5s linear;
+  &:hover {
+    color: #888;
+  }
 }
 .black-homepage-bottom {
   height: 25%;
+  transition: all 0.5s linear;
+  &:hover {
+    color: #888;
+  }
 }
 .homepage-logo-home {
   position: absolute;
@@ -1383,6 +1384,11 @@ span.bold-tittle-lequipe {
     align-items: center;
     background-color: #000;
     color: #fff;
+
+    transition: all 0.5s linear;
+    &:hover {
+      color: #888;
+    }
   }
   .menu-mobile-edification {
     flex: 0 0 50%;
@@ -1391,6 +1397,11 @@ span.bold-tittle-lequipe {
     align-items: center;
     background-color: #fff;
     color: #000;
+
+    transition: all 0.5s linear;
+    &:hover {
+      color: #888;
+    }
   }
 }
 @import "_responsive.scss";
